# liquid-mirror-analytics

./: .gitignore  Procfile  README.md  SESSION_HANDOFF.md  manage_keys.py  pyproject.toml  railway.json  requirements.txt  run_migration.py  test_pipeline.py  tree.txt
docs/: NEXT_OTLP_PERSISTENCE.md  QUICKSTART.md  SESSION_HANDOFF_2026-01-09.md  SESSION_RECAP_2026-01-06.md
frontend/: package.json  svelte.config.js  tailwind.config.js
frontend/src/: app.css  app.html
frontend/src/lib/components/charts/: BarChart.svelte  DateRangePicker.svelte  DoughnutChart.svelte  ExportButton.svelte  LineChart.svelte  NerveCenterWidget.svelte  RealtimeSessions.svelte  StatCard.svelte  chartTheme.ts
frontend/src/lib/components/threlte/: DataSynapse.svelte  MemoryOrbit.svelte  NerveCenterScene.svelte  NeuralNetwork.svelte  NeuralNode.svelte
frontend/src/lib/stores/: analytics.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/dashboard/: +page.svelte
migrations/: 001_liquid_mirror_schema.sql
src/liquid_mirror/: __init__.py  heuristics.py  ingest.py  logging_config.py  main.py  routes.py  service.py
src/liquid_mirror/events/: __init__.py  bus.py  events.py
src/liquid_mirror/mirror/: __init__.py  metacognitive_mirror.py
src/liquid_mirror/otlp/: __init__.py  mapper.py  receiver.py  semantic_conventions.py
tests/: __init__.py  test_events.py
