[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liquid-mirror-analytics"
version = "0.1.0"
description = "Analytics engine for enterprise AI assistants with event hooks for metacognitive systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mike Hartigan" }
]
keywords = ["analytics", "observability", "ai", "enterprise"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "fastapi>=0.100.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/mhartigan/liquid-mirror-analytics"
Repository = "https://github.com/mhartigan/liquid-mirror-analytics"

[tool.hatch.build.targets.sdist]
include = ["src/liquid_mirror"]

[tool.hatch.build.targets.wheel]
packages = ["src/liquid_mirror"]

[tool.hatch.build]
sources = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
